Adding clear recent songs history features and fix the cover for ads